--- a/models/naive_bayes.ipynb
+++ b/models/naive_bayes.ipynb
@@ -18,7 +18,7 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, roc_curve\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lojistik regresyon modelini oluştur\n",
+    "# Naive Bayes modelini oluştur\n",
     "model = GaussianNB()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
