change data file path to relative path

--- a/models/k_nearest_neighbors.ipynb
+++ b/models/k_nearest_neighbors.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "# Veri setini yükle\n",
-    "data = pd.read_csv('/home/kpo/Downloads/diabetes-prediction-ml/data/diabetes.csv')\n",
+    "data = pd.read_csv('/data/diabetes.csv')\n",
     "\n",
     "# Veri setinin ilk 5 satirini incele\n",
     "print(data.head())"
